Fixed rendering issues on mobile, grunt build causes me issues, will re add commented out stuff later

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -14,4 +14,5 @@ core-toolbar {
   background: #4CAF50;
   color: white;
   font-family: sans-serif;
+  height: 3em;
 }
